--- a/files/css/jquery-ui.css
+++ b/files/css/jquery-ui.css
@@ -1663,7 +1663,7 @@ body .ui-tooltip {
     background-position: -64px -128px;
 }
 
-.ui-icon-close {
+.ui-icon- {
     background-position: -80px -128px;
 }
 
