--- a/files/css/jquery-ui.css
+++ b/files/css/jquery-ui.css
@@ -1031,7 +1031,7 @@ body .ui-tooltip {
 
 .ui-widget-content {
     border: 1px solid #aaaaaa;
-    background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
+    background: #ffffff;
     color: #222222;
 }
 
@@ -1187,15 +1187,6 @@ body .ui-tooltip {
 .ui-icon {
     width: 16px;
     height: 16px;
-}
-
-.ui-icon,
-.ui-widget-content .ui-icon {
-    background-image: url("images/ui-icons_222222_256x240.png");
-}
-
-.ui-widget-header .ui-icon {
-    background-image: url("images/ui-icons_222222_256x240.png");
 }
 
 .ui-state-default .ui-icon {
@@ -1965,7 +1956,7 @@ body .ui-tooltip {
 /* Overlays */
 
 .ui-widget-overlay {
-    background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+    background: #aaaaaa;
     opacity: .3;
     filter: Alpha(Opacity=30);
     /* support: IE8 */
@@ -1974,7 +1965,7 @@ body .ui-tooltip {
 .ui-widget-shadow {
     margin: -8px 0 0 -8px;
     padding: 8px;
-    background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+    background: #aaaaaa;
     opacity: .3;
     filter: Alpha(Opacity=30);
     /* support: IE8 */
